fix: update tracking section description text

--- a/Backend/static/index.html
+++ b/Backend/static/index.html
@@ -391,7 +391,7 @@
             <div class="section-header" data-reveal>
                 <span class="section-badge">Lacak Pesanan</span>
                 <h2>Cek <span class="gradient-text">Status Pesanan</span> Anda</h2>
-                <p>Masukkan Order ID yang dikirim via WhatsApp/Email untuk melacak pesanan Anda</p>
+                <p>Masukkan Order ID yang anda dapatkan saat memesan untuk melacak pesanan Anda</p>
             </div>
 
             <div class="tracking-container" data-reveal data-reveal-delay="100">
